LayoutTests/fast/js/resources/regexp-character-match-out-of-order.js
@@ -1,0 +1,5 @@
+description('Test to ensure RegExp generates single character matches in the correct order');
+
+shouldBe("/[\\w']+/.exec(\"'_'\").toString()", "\"'_'\"");
+
+var successfullyParsed = true;
